--- a/manifest.json
+++ b/manifest.json
@@ -12,10 +12,10 @@
     },
     "browser_action": {
         "default_icon": {
-            "16": "images/logo.png",
-            "32": "images/logo.png",
-            "48": "images/logo.png",
-            "128": "images/logo.png"
+            "16": "images/logo-16.png",
+            "32": "images/logo-32.png",
+            "48": "images/logo-48.png",
+            "128": "images/logo-128.png"
         }
     },
     "content_scripts": [
@@ -41,10 +41,10 @@
         }
     ],
     "icons": {
-        "16": "images/logo.png",
-        "32": "images/logo.png",
-        "48": "images/logo.png",
-        "128": "images/logo.png"
+        "16": "images/logo-16.png",
+        "32": "images/logo-32.png",
+        "48": "images/logo-48.png",
+        "128": "images/logo-128.png"
     },
     "web_accessible_resources": [
         "js/bootstrap.min.js",
